--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div>Index</div>
+    <a href="project.html">Project</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="about.html">About</a>
     
 </body>
 </html>
