--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>Index</div>
-    <a href="project.html">Project</a>
-    <a href="showcase.html">Showcase</a>
-    <a href="about.html">About</a>
+    <div id="header">
+        <a id="brand" href="index.html">
+            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
+            <h1>Dynamite</h1>
+        </a>
+        <div id="navbar">
+            <a href="project.html">Projects</a>
+            <a href="showcase.html">Showcase</a>
+            <a href="about.html">About</a>
+        </div>
+    </div>
+
+    <div id="main">
+        <div class="main-content">
+            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
+            <div id="main-text">
+                <h2>Ignite Your Digital Potential</h2>
+                <p>We're Dynamite, a passionate web development team transforming innovative ideas into powerful digital solutions. From sleek designs to robust software, we deliver explosive results.</p>
+                <a href="about.html">Learn More About Us</a>
+            </div>
+            
+        </div>
+    </div>
     
 </body>
 </html>
