Add bad web app design report page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Dynamite Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
             <h1>Dynamite</h1>
         </a>
         <div id="navbar">
+            <a href="about.html">About</a>
             <a href="project.html">Projects</a>
             <a href="showcase.html">Showcase</a>
-            <a href="about.html">About</a>
         </div>
     </div>
 
