Showcase added, nav bar improved

--- a/gooddesign.html
+++ b/gooddesign.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good App Design Report</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d7de9e626c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -15,11 +16,24 @@
             <h1>Dynamite</h1>
         </a>
         <div id="navbar">
-            <a href="about.html">About</a>
-            <a href="project.html">Projects</a>
-            <a href="showcase.html">Showcase</a>
+            <a href="index.html">
+                <i class="fa-solid fa-house"></i> <br>
+                <strong>Home</strong>
+            </a>
+            <a href="about.html">
+                <i class="fa-solid fa-address-card"></i> <br>
+                <strong>About</strong>
+            </a>
+            <a href="project.html">
+                <i class="fa-solid fa-list-check"></i> <br>
+                <strong>Projects</strong>
+            </a>
+            <a href="showcase.html">
+                <i class="fa-solid fa-panorama"></i> <br>
+                <strong>Showcase</strong>
+            </a>
         </div>
-    </div>
+    </div> 
 
     <div class="report-container">
         <h1 class="report-title">Good Web App Design: LinkedIn</h1>
