--- a/showcase.html
+++ b/showcase.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dynamite Home</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d7de9e626c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>showcase</div>
-    <a href="index.html">Index</a>
+    <div id="header">
+        <a id="brand" href="index.html">
+            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
+            <h1>Dynamite</h1>
+        </a>
+        <div id="navbar">
+            <a href="index.html">
+                <i class="fa-solid fa-house"></i> <br>
+                <strong>Home</strong>
+            </a>
+            <a href="about.html">
+                <i class="fa-solid fa-address-card"></i> <br>
+                <strong>About</strong>
+            </a>
+            <a href="project.html">
+                <i class="fa-solid fa-list-check"></i> <br>
+                <strong>Projects</strong>
+            </a>
+            <a href="showcase.html">
+                <i class="fa-solid fa-panorama"></i> <br>
+                <strong>Showcase</strong>
+            </a>
+        </div>
+    </div> 
+
+    <div id="main">
+        <div class="main-content">
+            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
+            <div id="main-text">
+                <h2>Ignite Your Digital Potential</h2>
+                <p>We're Dynamite, a passionate web development team transforming innovative ideas into powerful digital solutions. From sleek designs to robust software, we deliver explosive results.</p>
+                <a href="about.html">Learn More About Us</a>
+            </div>
+            
+        </div>
+    </div>
+    
 </body>
 </html>
