--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamite Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d7de9e626c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="header">
@@ -13,11 +14,24 @@
             <h1>Dynamite</h1>
         </a>
         <div id="navbar">
-            <a href="about.html">About</a>
-            <a href="project.html">Projects</a>
-            <a href="showcase.html">Showcase</a>
+            <a href="index.html">
+                <i class="fa-solid fa-house"></i> <br>
+                <strong>Home</strong>
+            </a>
+            <a href="about.html">
+                <i class="fa-solid fa-address-card"></i> <br>
+                <strong>About</strong>
+            </a>
+            <a href="project.html">
+                <i class="fa-solid fa-list-check"></i> <br>
+                <strong>Projects</strong>
+            </a>
+            <a href="showcase.html">
+                <i class="fa-solid fa-panorama"></i> <br>
+                <strong>Showcase</strong>
+            </a>
         </div>
-    </div>
+    </div> 
 
     <div id="main">
         <div class="main-content">
