--- a/showcase.html
+++ b/showcase.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamite Home</title>
+    <title>Showcase</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/d7de9e626c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="header">
         <a id="brand" href="index.html">
@@ -31,19 +33,20 @@
                 <strong>Showcase</strong>
             </a>
         </div>
-    </div> 
+    </div>
 
-    <div id="main">
-        <div class="main-content">
-            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
-            <div id="main-text">
-                <h2>Ignite Your Digital Potential</h2>
-                <p>We're Dynamite, a passionate web development team transforming innovative ideas into powerful digital solutions. From sleek designs to robust software, we deliver explosive results.</p>
-                <a href="about.html">Learn More About Us</a>
-            </div>
-            
+    <h1 id="showcase-header">
+        <i class="fa-solid fa-solar-panel"></i> Showcase <i class="fa-solid fa-solar-panel"></i>
+    </h1>
+
+    <div id="organizer">
+        <div id="panel"> 
+            <iframe id="embedded-page" src="gooddesign.html" title="Analysis of Good Web Design"></iframe>
+        </div>
+        <div id="panel">
+            <iframe id="embedded-page" src="baddesign.html" title="Analysis of Poor Web Design"></iframe>
         </div>
     </div>
-    
 </body>
+
 </html>
