added template pages

--- a/project.html
+++ b/project.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d7de9e626c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>Project</div>
-    <a href="index.html">Index</a>
+    <div id="header">
+        <a id="brand" href="index.html">
+            <img src="images/dynamite_logo.png" alt="Dynamite Logo">
+            <h1>Dynamite</h1>
+        </a>
+        <div id="navbar">
+            <a href="index.html">
+                <i class="fa-solid fa-house"></i> <br>
+                <strong>Home</strong>
+            </a>
+            <a href="about.html">
+                <i class="fa-solid fa-address-card"></i> <br>
+                <strong>About</strong>
+            </a>
+            <a href="project.html">
+                <i class="fa-solid fa-list-check"></i> <br>
+                <strong>Projects</strong>
+            </a>
+            <a href="showcase.html">
+                <i class="fa-solid fa-panorama"></i> <br>
+                <strong>Showcase</strong>
+            </a>
+        </div>
+    </div>
+
+    <h1 id="project-header">
+        <i class="fa-solid fa-file-shield"></i> Project <i class="fa-solid fa-file-shield"></i>
+    </h1>
+
+    <p>Nothing here... yet</p>
 </body>
+
 </html>
