--- a/showcase.html
+++ b/showcase.html
@@ -40,11 +40,27 @@
     </h1>
 
     <div id="organizer">
-        <div id="panel"> 
-            <iframe id="embedded-page" src="gooddesign.html" title="Analysis of Good Web Design"></iframe>
+        <div>
+            <a class="title" href="gooddesign.html">
+                <h1>Good Web App Design</h1>
+            </a>
+            <div id="panel">
+                <iframe id="embedded-page" src="gooddesigndummy.html" title="Analysis of Good Web Design"></iframe>
+            </div>
+            <a class="bottom" href="gooddesign.html">
+                <h1>View Full Page</h1>
+            </a>
         </div>
-        <div id="panel">
-            <iframe id="embedded-page" src="baddesign.html" title="Analysis of Poor Web Design"></iframe>
+        <div>
+            <a class="title" href="baddesign.html">
+                <h1>Poor Web App Design</h1>
+            </a>
+            <div id="panel">
+                <iframe id="embedded-page" src="baddesigndummy.html" title="Analysis of Poor Web Design"></iframe>
+            </div>
+            <a class="bottom" href="baddesign.html">
+                <h1>View Full Page</h1>
+            </a>
         </div>
     </div>
 </body>
