--- a/gooddesigndummy.html
+++ b/gooddesigndummy.html
@@ -11,24 +11,24 @@
 
 <body>
     <div id="header">
-        <a id="brand" href="index.html">
+        <a id="brand">
             <img src="images/dynamite_logo.png" alt="Dynamite Logo">
             <h1>Dynamite</h1>
         </a>
         <div id="navbar">
-            <a href="index.html">
+            <a>
                 <i class="fa-solid fa-house"></i> <br>
                 <strong>Home</strong>
             </a>
-            <a href="about.html">
+            <a>
                 <i class="fa-solid fa-address-card"></i> <br>
                 <strong>About</strong>
             </a>
-            <a href="project.html">
+            <a>
                 <i class="fa-solid fa-list-check"></i> <br>
                 <strong>Projects</strong>
             </a>
-            <a href="showcase.html">
+            <a>
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
             </a>
@@ -38,7 +38,7 @@
     <div class="report-container">
         <h1 class="report-title">Good Web App Design: LinkedIn</h1>
         <img src="images/gooddesign_img.png" width="800" height="auto" class="report-img">
-        <div class="report-link">Visit Website: <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></div>
+        <div class="report-link">Visit Website: <a>LinkedIn</a></div>
 
         <div class="report-section">
             <h2 class="section-title">1.0. Intro</h2>
