about me palceholder imgages

--- a/about.html
+++ b/about.html
@@ -35,9 +35,36 @@
 
     <h1 id="about-header">
         <i class="fa-solid fa-eject"></i> About <i class="fa-solid fa-eject"></i>
+
     </h1>
 
-    <p>TODO</p>
+    <div id="about-container">
+
+        <div class="about-person">
+            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
+            <h1>Name</h1>
+            <p>TODO</p>
+        </div>
+
+        <div class="about-person">
+            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
+            <h1>Name</h1>
+            <p>TODO</p>
+        </div>
+
+        <div class="about-person">
+            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
+            <h1>Name</h1>
+            <p>TODO</p>
+        </div>
+
+        <div class="about-person">
+            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
+            <h1>Name</h1>
+            <p>TODO</p>
+        </div>
+
+    </div>
 </body>
 
 </html>
