About page done

--- a/about.html
+++ b/about.html
@@ -41,27 +41,27 @@
     <div id="about-container">
 
         <div class="about-person">
-            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
-            <h1>Name</h1>
-            <p>TODO</p>
+            <img class="about-pfp" src="images/about/grady.jpg" alt="">
+            <h1>Grady Rueffer</h1>
+            <p>I'm an amateur accordian player</p>
         </div>
 
         <div class="about-person">
-            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
-            <h1>Name</h1>
-            <p>TODO</p>
+            <img class="about-pfp" src="images/about/moeez.jpg" alt="">
+            <h1>Abdul Moeez Shaikh</h1>
+            <p>I can play the piano</p>
         </div>
 
         <div class="about-person">
-            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
-            <h1>Name</h1>
-            <p>TODO</p>
+            <img class="about-pfp" src="images/about/daryl.jpg" alt="">
+            <h1>Daryl John</h1>
+            <p>I go to the gym</p>
         </div>
 
         <div class="about-person">
-            <img class="about-pfp"   src="images/dynamite_logo.png" alt="">
-            <h1>Name</h1>
-            <p>TODO</p>
+            <img class="about-pfp" src="images/about/gagan.jpg" alt="">
+            <h1>Gagan Bhattarai</h1>
+            <p>I play badminton</p>
         </div>
 
     </div>
