Finish client report

--- a/clientReport.html
+++ b/clientReport.html
@@ -40,56 +40,65 @@
         <img src="images/basketball.webp" width="800" height="auto" class="report-img">
 
         <div class="report-section">
-            <h2 class="section-title">Project Name: ___</h2>
+            <h2 class="section-title">Project Name: Bounce</h2>
         </div>
 
         <div class="report-section">
             <h2 class="section-title">Client Name: Krishh Lala</h2>
         </div>
 
-        <div class="report-section">
-            <h2 class="section-title">Target Users:</h2>
-            <p class="section-paragraph">
-                LinkedIn, the site widely considered to be the best job site for professionals and home to industry leaders and employers, boasts ideal responsive and streamlined design, providing the best possible experience to their users. 
-                From the moment you enter the site, greeted by soft, light colours with popping icons and suggestions, LinkedIn guides users to all the locations they’re looking for and more. 
-                The combination of LinkedIn’s consistency, ease of use, usability, and streamlined simplification makes it an industry staple with a great user experience.
-            </p>
-        </div>
+        <div class="align-left">
+            <div class="report-section">
+                <h2 class="section-title">Target Users:</h2>
+                <p class="section-paragraph">
+                    The primary users of this web app are basketball enthusiasts who enjoy playing strategy-based sports simulations. These users may range from casual fans looking for a fun way to engage with the sport, to more dedicated basketball analysts who want to test their strategic decision-making. The app will likely attract desktop users due to its strategic and text-based nature, but ensuring mobile compatibility would be beneficial for accessibility.
+                </p>
+            </div>
 
-        <div class="report-section">
-            <h2 class="section-title">Static Information:</h2>
-            <p class="section-paragraph">
-                LinkedIn, the site widely considered to be the best job site for professionals and home to industry leaders and employers, boasts ideal responsive and streamlined design, providing the best possible experience to their users. 
-                From the moment you enter the site, greeted by soft, light colours with popping icons and suggestions, LinkedIn guides users to all the locations they’re looking for and more. 
-                The combination of LinkedIn’s consistency, ease of use, usability, and streamlined simplification makes it an industry staple with a great user experience.
-            </p>
-        </div>
+            <div class="report-section">
+                <h2 class="section-title">Static Information:</h2>
+                <p class="section-paragraph">
+                    The app should provide basic information including:
+                    <ul class="section-paragraph">
+                        <li>FAQ/help section explaining the game mechanics</li>
+                        <li>Leaderboards showing top-performing users</li>
+                        <li>A database of real NBA players with their respective stats</li>
+                    </ul>
+                </p>
+            </div>
 
-        <div class="report-section">
-            <h2 class="section-title">Design Elements:</h2>
-            <p class="section-paragraph">
-                LinkedIn, the site widely considered to be the best job site for professionals and home to industry leaders and employers, boasts ideal responsive and streamlined design, providing the best possible experience to their users. 
-                From the moment you enter the site, greeted by soft, light colours with popping icons and suggestions, LinkedIn guides users to all the locations they’re looking for and more. 
-                The combination of LinkedIn’s consistency, ease of use, usability, and streamlined simplification makes it an industry staple with a great user experience.
-            </p>
-        </div>
+            <div class="report-section">
+                <h2 class="section-title">Design Elements:</h2>
+                <p class="section-paragraph">
+                    The design of the web app should be clean, intuitive, and focused on text-based interactions. Since the simulation relies on user decisions rather than visual animations, a structured and easy-to-navigate interface is essential. Key design elements should include clearly labeled options for each play action, a visually appealing but minimalistic UI to keep users engaged, avoid overly flashy visuals or unnecessary animations, and must focus on readability, ensuring that stats and play choices are easy to access.
+                </p>
+            </div>
 
-        <div class="report-section">
-            <h2 class="section-title">Stored Data:</h2>
-            <p class="section-paragraph">
-                LinkedIn, the site widely considered to be the best job site for professionals and home to industry leaders and employers, boasts ideal responsive and streamlined design, providing the best possible experience to their users. 
-                From the moment you enter the site, greeted by soft, light colours with popping icons and suggestions, LinkedIn guides users to all the locations they’re looking for and more. 
-                The combination of LinkedIn’s consistency, ease of use, usability, and streamlined simplification makes it an industry staple with a great user experience.
-            </p>
-        </div>
+            <div class="report-section">
+                <h2 class="section-title">Stored Data:</h2>
+                <p class="section-paragraph">
+                    The web app will need to manage and present various types of data, including:
+                    <ul class="section-paragraph">
+                        <li>Player Database: Real-life player stats, such as shooting accuracy, defensive ability, and stamina, which influence gameplay.</li>
+                        <li>Team Management System: Users can create and manage teams based on real players.</li>
+                        <li>Game Simulation Data: The app needs to track in-game progress, scoring, and player actions based on probabilities derived from real statistics.</li>
+                        <li>User Currency System: A virtual currency system where players earn rewards for winning games and can use these rewards for team upgrades or other enhancements.</li>
+                    </ul>
+                </p>
+            </div>
 
-        <div class="report-section">
-            <h2 class="section-title">Interactive Elements:</h2>
-            <p class="section-paragraph">
-                LinkedIn, the site widely considered to be the best job site for professionals and home to industry leaders and employers, boasts ideal responsive and streamlined design, providing the best possible experience to their users. 
-                From the moment you enter the site, greeted by soft, light colours with popping icons and suggestions, LinkedIn guides users to all the locations they’re looking for and more. 
-                The combination of LinkedIn’s consistency, ease of use, usability, and streamlined simplification makes it an industry staple with a great user experience.
-            </p>
+            <div class="report-section">
+                <h2 class="section-title">Interactive Elements:</h2>
+                <p class="section-paragraph">
+                    While the game is primarily text-based, several interactive elements can help enhance user engagement:
+                    <ul class="section-paragraph">
+                        <li>Choice-Based Gameplay: Users select actions (e.g., shooting a three-pointer, driving for a layup, playing tight defense) that influence game outcomes based on real stats.</li>
+                        <li>Dynamic Probability-Based Outcomes: Player stats dictate success rates, ensuring a realistic and balanced simulation experience.</li>
+                        <li>Currency & Rewards System: Users earn currency for victories, which can be used to acquire better players, improve team stats, or unlock special features.</li>
+                        <li>Customizable Teams: Users draft real players, forming unique teams based on real-world abilities and strategic preferences.</li>
+                    </ul>
+                </p>
+            </div>
         </div>
 
     </div>
