--- a/project.html
+++ b/project.html
@@ -37,7 +37,19 @@
         <i class="fa-solid fa-file-shield"></i> Project <i class="fa-solid fa-file-shield"></i>
     </h1>
 
-    <p>Nothing here... yet</p>
+    <div id="team-report">
+        <div>
+            <a class="title" href="clientReport.html">
+                <h1>Client Report</h1>
+            </a>
+            <div id="panel">
+                <iframe id="embedded-page" src="clientReportDummy.html" title="Client Outline Report"></iframe>
+            </div>
+            <a class="bottom" href="clientReport.html">
+                <h1>View Full Page</h1>
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
