added footer and changed gagan pfp

--- a/about.html
+++ b/about.html
@@ -59,11 +59,15 @@
         </div>
 
         <div class="about-person">
-            <img class="about-pfp" src="images/about/gagan.jpg" alt="">
+            <img class="about-pfp" src="images/about/gagan2.jpeg" alt="">
             <h1>Gagan Bhattarai</h1>
             <p>I play badminton</p>
         </div>
 
+    </div>
+
+    <div id="footer">
+        <p> &copy;  <strong>Team Dynamite 2025</strong></p>
     </div>
 </body>
 
