--- a/clientReport.html
+++ b/clientReport.html
@@ -103,5 +103,9 @@
 
     </div>
 
+    <div id="footer">
+        <p> &copy;  <strong>Team Dynamite 2025</strong></p>
+    </div>
+
 </body>
 </html>
