--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             
         </div>
     </div>
+
+    <div id="footer">
+        <p> &copy;  <strong>Team Dynamite 2025</strong></p>
+    </div>
     
 </body>
 </html>
