--- a/showcase.html
+++ b/showcase.html
@@ -63,6 +63,10 @@
             </a>
         </div>
     </div>
+
+    <div id="footer">
+        <p> &copy;  <strong>Team Dynamite 2025</strong></p>
+    </div>
 </body>
 
 </html>
