--- a/clientReportDummy.html
+++ b/clientReportDummy.html
@@ -29,6 +29,10 @@
                 <strong>Projects</strong>
             </a>
             <a>
+                <i class="fa-solid fa-tablet"></i> <br>
+                <strong>Dev. Plan</strong>
+            </a>
+            <a>
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
             </a>
