--- a/devPlanDummy.html
+++ b/devPlanDummy.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <div id="header">
-        <a id="brand" href="index.html">
+        <a id="brand">
             <img src="images/dynamite_logo.png" alt="Dynamite Logo">
             <h1>Dynamite</h1>
         </a>
         <div id="navbar">
-            <a href="index.html">
+            <a>
                 <i class="fa-solid fa-house"></i> <br>
                 <strong>Home</strong>
             </a>
-            <a href="about.html">
+            <a>
                 <i class="fa-solid fa-address-card"></i> <br>
                 <strong>About</strong>
             </a>
-            <a href="project.html">
+            <a>
                 <i class="fa-solid fa-list-check"></i> <br>
                 <strong>Projects</strong>
             </a>
-            <a href="devPlan.html">
+            <a>
                 <i class="fa-solid fa-tablet"></i> <br>
                 <strong>Dev. Plan</strong>
             </a>
-            <a href="showcase.html">
+            <a>
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
             </a>
