--- a/gooddesign.html
+++ b/gooddesign.html
@@ -28,6 +28,10 @@
                 <i class="fa-solid fa-list-check"></i> <br>
                 <strong>Projects</strong>
             </a>
+            <a href="devPlan.html">
+                <i class="fa-solid fa-tablet"></i> <br>
+                <strong>Dev. Plan</strong>
+            </a>
             <a href="showcase.html">
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
