--- a/project.html
+++ b/project.html
@@ -26,6 +26,10 @@
                 <i class="fa-solid fa-list-check"></i> <br>
                 <strong>Projects</strong>
             </a>
+            <a href="devPlan.html">
+                <i class="fa-solid fa-tablet"></i> <br>
+                <strong>Dev. Plan</strong>
+            </a>
             <a href="showcase.html">
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
@@ -37,7 +41,32 @@
         <i class="fa-solid fa-file-shield"></i> Project <i class="fa-solid fa-file-shield"></i>
     </h1>
 
-    <div id="team-report">
+    <div id="organizer">
+        <div>
+            <a class="title" href="devPlan.html">
+                <h1>Development Plan</h1>
+            </a>
+            <div id="panel">
+                <iframe id="embedded-page" src="devPlanDummy.html" title="Development Plan"></iframe>
+            </div>
+            <a class="bottom" href="devPlan.html">
+                <h1>View Full Page</h1>
+            </a>
+        </div>
+        <div>
+            <a class="title" href="clientReport.html">
+                <h1>Client Report</h1>
+            </a>
+            <div id="panel">
+                <iframe id="embedded-page" src="clientReportDummy.html" title="Client Report"></iframe>
+            </div>
+            <a class="bottom" href="clientReport.html">
+                <h1>View Full Page</h1>
+            </a>
+        </div>
+    </div>
+
+    <!-- <div id="team-report">
         <div>
             <a class="title" href="clientReport.html">
                 <h1>Client Report</h1>
@@ -49,7 +78,7 @@
                 <h1>View Full Page</h1>
             </a>
         </div>
-    </div>
+    </div> -->
 
     <div id="footer">
         <p> &copy;  <strong>Team Dynamite 2025</strong></p>
