--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <i class="fa-solid fa-panorama"></i> <br>
                 <strong>Showcase</strong>
             </a>
+            <a href="./HoopsDynasty">
+                <i class="fa-solid fa-basketball"></i> <br>
+                <strong>Hoops Dynasty</strong>
+            </a>
         </div>
     </div> 
 
