--- a/devPlanDummy.html
+++ b/devPlanDummy.html
@@ -187,6 +187,7 @@
                             <ul style="margin-left: 15px; margin-top: 5px;">
                                 <li>Moeez created a basic HTML/CSS layout for the menu, team selection, and game pages</li>
                                 <li>Grady connected player data from the database to the pages using PHP</li>
+                                <li>Hosted player images to be pulled from the server asynchronously from the server as longblobs</li>
                             </ul>
                         </li>
                         <li style="margin-bottom: 10px;"><strong>Account system (Gagan):</strong>
@@ -231,9 +232,10 @@
                                 <li>Fully redesigned the visual theme of the entire webapp to be more visually appealing</li>
                             </ul>
                         </li>
-                        <li style="margin-bottom: 10px;"><strong>Expanded player database (Grady):</strong>
+                        <li style="margin-bottom: 10px;"><strong>Expanded player database and improved queries (Grady):</strong>
                             <ul style="margin-left: 15px; margin-top: 5px;">
                                 <li>Added a lot more new players with accurate stats and images to ensure variety</li>
+                                <li>Refined and Improved Databases Queries and AJAX requests to specifications.</li>
                             </ul>
                         </li>
                         <li style="margin-bottom: 10px;"><strong>Game logic tweaks (Daryl):</strong>
